[gd_scene load_steps=8 format=2]

[ext_resource path="res://core/PlayerCutsceneManager.gd" type="Script" id=1]
[ext_resource path="res://core/utils/CollisionTrigger.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/CutscenePlayer.gd" type="Script" id=3]
[ext_resource path="res://core/Cutscene.gd" type="Script" id=4]
[ext_resource path="res://interactable_scripts/base/InteractionArea.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 256, 256 )

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 200.0

[node name="Cutscene" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
script = ExtResource( 3 )

[node name="PlayerCutsceneManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionTrigger" parent="." instance=ExtResource( 2 )]
visible = false
disable_on_trigger = true

[node name="CollisionShape2D" parent="CollisionTrigger" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="InteractionArea" parent="." instance=ExtResource( 5 )]
disable_on_trigger = true

[node name="CollisionShape2D" parent="InteractionArea" index="0"]
shape = SubResource( 2 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="CollisionTrigger" to="." method="_on_CollisionTrigger_area_entered"]
[connection signal="interacted_with_actor" from="InteractionArea" to="." method="_on_InteractionArea_interacted_with_actor"]

[editable path="CollisionTrigger"]

[editable path="InteractionArea"]
